@@ -43,6 +43,7 @@ namespace Marvel {
 			{mvPythonDataType::String, "parent", "Parent to add this item to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
 			{mvPythonDataType::String, "source", "", "''"},
+			{mvPythonDataType::Bool, "enabled", "Display grayed out text so selectable cannot be selected", "True"},
 			{mvPythonDataType::Integer, "width","", "0"},
 			{mvPythonDataType::Bool, "on_enter", "Only runs callback on enter", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
@@ -61,6 +62,7 @@ namespace Marvel {
 			{mvPythonDataType::String, "parent", "Parent this item will be added to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
 			{mvPythonDataType::String, "source", "", "''"},
+			{mvPythonDataType::Bool, "enabled", "Display grayed out text so selectable cannot be selected", "True"},
 			{mvPythonDataType::Integer, "width","", "0"},
 			{mvPythonDataType::Bool, "on_enter", "Only runs callback on enter", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
@@ -79,6 +81,7 @@ namespace Marvel {
 			{mvPythonDataType::String, "parent", "Parent this item will be added to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
 			{mvPythonDataType::String, "source", "", "''"},
+			{mvPythonDataType::Bool, "enabled", "Display grayed out text so selectable cannot be selected", "True"},
 			{mvPythonDataType::Integer, "width","", "0"},
 			{mvPythonDataType::Bool, "on_enter", "Only runs callback on enter", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
@@ -97,6 +100,7 @@ namespace Marvel {
 			{mvPythonDataType::String, "parent", "Parent this item will be added to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
 			{mvPythonDataType::String, "source", "", "''"},
+			{mvPythonDataType::Bool, "enabled", "Display grayed out text so selectable cannot be selected", "True"},
 			{mvPythonDataType::Integer, "width","", "0"},
 			{mvPythonDataType::Bool, "on_enter", "Only runs callback on enter", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
@@ -116,6 +120,7 @@ namespace Marvel {
 			{mvPythonDataType::String, "parent", "Parent this item will be added to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
 			{mvPythonDataType::String, "source", "", "''"},
+			{mvPythonDataType::Bool, "enabled", "Display grayed out text so selectable cannot be selected", "True"},
 			{mvPythonDataType::Integer, "width","", "0"},
 			{mvPythonDataType::Bool, "on_enter", "Only runs callback on enter", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
@@ -137,6 +142,7 @@ namespace Marvel {
 			{mvPythonDataType::String, "parent", "Parent this item will be added to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
 			{mvPythonDataType::String, "source", "", "''"},
+			{mvPythonDataType::Bool, "enabled", "Display grayed out text so selectable cannot be selected", "True"},
 			{mvPythonDataType::Integer, "width","", "0"},
 			{mvPythonDataType::Bool, "on_enter", "Only runs callback on enter", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
@@ -156,6 +162,7 @@ namespace Marvel {
 			{mvPythonDataType::String, "parent", "Parent this item will be added to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
 			{mvPythonDataType::String, "source", "", "''"},
+			{mvPythonDataType::Bool, "enabled", "Display grayed out text so selectable cannot be selected", "True"},
 			{mvPythonDataType::Integer, "width","", "0"},
 			{mvPythonDataType::Bool, "on_enter", "Only runs callback on enter", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
@@ -175,6 +182,7 @@ namespace Marvel {
 			{mvPythonDataType::String, "parent", "Parent this item will be added to. (runtime adding)", "''"},
 			{mvPythonDataType::String, "before", "This item will be displayed before the specified item in the parent. (runtime adding)", "''"},
 			{mvPythonDataType::String, "source", "", "''"},
+			{mvPythonDataType::Bool, "enabled", "Display grayed out text so selectable cannot be selected", "True"},
 			{mvPythonDataType::Integer, "width","", "0"},
 			{mvPythonDataType::Bool, "on_enter", "Only runs callback on enter", "False"},
 			{mvPythonDataType::String, "label", "", "''"},
@@ -248,6 +256,7 @@ namespace Marvel {
 		const char* before = "";
 		const char* parent = "";
 		const char* source = "";
+		int enabled = true;
 		int on_enter = false;
 		const char* label = "";
 		const char* popup = "";
@@ -255,7 +264,7 @@ namespace Marvel {
 		int readonly = false;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_input_int"].parse(args, kwargs, __FUNCTION__, &name,
-			&default_value, &callback, &callback_data, &tip, &parent, &before, &source, &width, &on_enter,
+			&default_value, &callback, &callback_data, &tip, &parent, &before, &source, &enabled, &width, &on_enter,
 			&label, &popup, &show, &readonly))
 			return ToPyBool(false);
 
@@ -288,6 +297,7 @@ namespace Marvel {
 		const char* before = "";
 		const char* parent = "";
 		const char* source = "";
+		int enabled = true;
 		int on_enter = false;
 		const char* label = "";
 		const char* popup = "";
@@ -295,7 +305,7 @@ namespace Marvel {
 		int readonly = false;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_input_int2"].parse(args, kwargs, __FUNCTION__, &name,
-			&default_value, &callback, &callback_data, &tip, &parent, &before, &source, &width, &on_enter,
+			&default_value, &callback, &callback_data, &tip, &parent, &before, &source, &enabled, &width, &on_enter,
 			&label, &popup, &show, &readonly))
 			return ToPyBool(false);
 
@@ -331,6 +341,7 @@ namespace Marvel {
 		const char* before = "";
 		const char* parent = "";
 		const char* source = "";
+		int enabled = true;
 		int on_enter = false;
 		const char* label = "";
 		const char* popup = "";
@@ -338,7 +349,7 @@ namespace Marvel {
 		int readonly = false;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_input_int3"].parse(args, kwargs, __FUNCTION__, &name,
-			&default_value, &callback, &callback_data, &tip, &parent, &before, &source, &width, &on_enter,
+			&default_value, &callback, &callback_data, &tip, &parent, &before, &source, &enabled, &width, &on_enter,
 			&label, &popup, &show, &readonly))
 			return ToPyBool(false);
 
@@ -375,6 +386,7 @@ namespace Marvel {
 		const char* before = "";
 		const char* parent = "";
 		const char* source = "";
+		int enabled = true;
 		int on_enter = false;
 		const char* label = "";
 		const char* popup = "";
@@ -382,7 +394,7 @@ namespace Marvel {
 		int readonly = false;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_input_int4"].parse(args, kwargs, __FUNCTION__, &name,
-			&default_value, &callback, &callback_data, &tip, &parent, &before, &source, &width, &on_enter,
+			&default_value, &callback, &callback_data, &tip, &parent, &before, &source, &enabled, &width, &on_enter,
 			&label, &popup, &show, &readonly))
 			return ToPyBool(false);
 
@@ -415,6 +427,7 @@ namespace Marvel {
 		const char* before = "";
 		const char* parent = "";
 		const char* source = "";
+		int enabled = true;
 		int on_enter = false;
 		const char* label = "";
 		const char* popup = "";
@@ -424,7 +437,7 @@ namespace Marvel {
 		int readonly = false;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_input_float"].parse(args, kwargs, __FUNCTION__, &name,
-			&default_value, &format, &callback, &callback_data, &tip, &parent, &before, &source, &width, &on_enter,
+			&default_value, &format, &callback, &callback_data, &tip, &parent, &before, &source, &enabled, &width, &on_enter,
 			&label, &popup, &show, &step, &step_fast, &readonly))
 			return ToPyBool(false);
 
@@ -458,6 +471,7 @@ namespace Marvel {
 		const char* before = "";
 		const char* parent = "";
 		const char* source = "";
+		int enabled = true;
 		int on_enter = false;
 		const char* label = "";
 		const char* popup = "";
@@ -465,7 +479,7 @@ namespace Marvel {
 		int readonly = false;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_input_float2"].parse(args, kwargs, __FUNCTION__, &name,
-			&default_value, &format, &callback, &callback_data, &tip, &parent, &before, &source, &width, &on_enter,
+			&default_value, &format, &callback, &callback_data, &tip, &parent, &before, &source, &enabled, &width, &on_enter,
 			&label, &popup, &show, &readonly))
 			return ToPyBool(false);
 
@@ -501,6 +515,7 @@ namespace Marvel {
 		const char* before = "";
 		const char* parent = "";
 		const char* source = "";
+		int enabled = true;
 		int on_enter = false;
 		const char* label = "";
 		const char* popup = "";
@@ -508,7 +523,7 @@ namespace Marvel {
 		int readonly = false;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_input_float3"].parse(args, kwargs, __FUNCTION__, &name,
-			&default_value, &format, &callback, &callback_data, &tip, &parent, &before, &source, &width, &on_enter,
+			&default_value, &format, &callback, &callback_data, &tip, &parent, &before, &source, &enabled, &width, &on_enter,
 			&label, &popup, &show, &readonly))
 			return ToPyBool(false);
 
@@ -546,6 +561,7 @@ namespace Marvel {
 		const char* before = "";
 		const char* parent = "";
 		const char* source = "";
+		int enabled = true;
 		int on_enter = false;
 		const char* label = "";
 		const char* popup = "";
@@ -553,7 +569,7 @@ namespace Marvel {
 		int readonly = false;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_input_float4"].parse(args, kwargs, __FUNCTION__, &name,
-			&default_value, &format, &callback, &callback_data, &tip, &parent, &before, &source, &width, &on_enter,
+			&default_value, &format, &callback, &callback_data, &tip, &parent, &before, &source, &enabled, &width, &on_enter,
 			&label, &popup, &show, &readonly))
 			return ToPyBool(false);
 
